# PasswordManagerBZ

./: README.md
Client/: client.py
PsswdManagerEncryption/: pyproject.toml  setup.py
PsswdManagerEncryption/psswdmanagerencryption/: encryptionManager.py
Server/: .gitignore  pyproject.toml
Server/app/: config.py  main.py
Server/app/encryption/: encryption.py  encryptionManager.py
Server/app/models/: db.py  passwords.py  user.py
