[tool.poetry]
name = "server"
version = "0.1.0"
description = "Server PasswordManager"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^42.0.8"
sqlmodel = "^0.0.19"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
